--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@react-input/mask": "^1.1.1",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
+    "@talkjs/react": "^0.1.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.6",
+    "talkjs": "^0.18.0",
     "use-react-router-breadcrumbs": "^4.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
