--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vis.gl/react-google-maps": "^1.2.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.4",
     "formik": "^2.4.6",
     "framer-motion": "^11.5.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-icons": "^5.1.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.12.6",
+    "recharts": "^2.12.7",
     "talkjs": "^0.18.0",
     "use-react-router-breadcrumbs": "^4.0.1",
     "uuid": "^9.0.1",
